--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 
 //Colors
 $red: #EF4B46;
-$blue: #6FB4E1;
+$blue: #F3F9FD;
 $blue_button: #6FB4E1;
 $yellow: rgba(239, 181, 67, 1);
 $bordure_champ:#DCE9F1;
@@ -16,11 +16,8 @@ $container-max-widths: (
 );
 $blue_light:#F3F9FD;
 $light_red:#F07777;
-<<<<<<< HEAD
 
 $blue_2:#6FB4E1;
-=======
 $yellow_light:#FACD5D;
 $purple:#BF74DF;
 $yellow_light1:#FDF4E0;
->>>>>>> c775dbb2caeb31ad1c47ddb66c6cea0d22f934be
