--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,10 +1,10 @@
-<div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5"
+<div class="container  px-6 sm:px-8 lg:px-24 pt-16 mb-5"
     style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
 
     <div class="nav flex flex-row justify-between">
         <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
         <button
-            class="text-white  px-4 text-xs font-extrabold self-center	bg-blue_dark	h-10 popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
+            class="text-white bg-blue px-4 text-xs font-extrabold self-center		h-10 popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
             connecter</button>
 
 
@@ -34,7 +34,7 @@
 
 </div>
 
-<div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5">
+<div class="container  px-6 sm:px-8 lg:px-24 pt-16 mb-5">
 
     <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
@@ -287,8 +287,7 @@
             <div class="mt-5 w-full">
                 <input type="email" name="email" id="email" placeholder="Votre email"
                     class="py-3 mt-2 px-4  xl:w-1/2 inline  shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
-                <button
-                    class=" bg-blue_dark hover:bg-blue-700 text-white ml-2 font-bold py-3 px-12 rounded-xl mt-3 mb-8">
+                <button class=" bg-blue  hover:bg-blue-700 text-white ml-2 font-bold py-3 px-12 rounded-xl mt-3 mb-8">
                     Démarrer</button>
             </div>
 
