--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -2,7 +2,7 @@
     font-size: 1rem;
 }
 .bg-blue{
-     @include bgColor($blue);
+     @include bgColor($blue_button);
 }
 .bg-blue_dark{
     @include bgColor($dark_blue)
