--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -34,7 +34,7 @@
 
 </div>
 
-<div class="container  px-6 sm:px-8 lg:px-24 pt-16 mb-5">
+<div class="  px-6 sm:px-8 lg:px-24 pt-16 mb-5">
 
     <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
