--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -5,7 +5,7 @@
 
         <div class="flex flex-row">
 
-            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire 😊
+            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire  😍
             </button>
 
 
@@ -16,13 +16,13 @@
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
                 <h1
-                    class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-5xl text-black leading-tight">
+                    class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-5xl ">
                     Le réseau immobilier qui <br>te fait <span class="light-red">gagner du temps </span> </h1>
             </div>
-
+<!-- 
             <button
                 class="btn_blue_3 text-white font-semibold py-4 px-12 rounded-md mt-3 mb-8 animate__animated animate__fadeInUp btnhover">
-                'adore 😍</button>
+                Démarrer 😍</button> -->
         </div>
         <div class=" ">
             <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/1.png" width="1900px"
@@ -45,7 +45,7 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h1 class=" popping font-extrabold leading-tight text-5xl mb-4">tenders <span class="text-purple">en
+                    <h1 class=" popping font-extrabold leading-tight text-4xl mb-4 sm:text-5xl">tenders <span class="text-purple">en
                             quelques <br>
                             mots...</span>
                     </h1>
@@ -54,7 +54,7 @@
 
                 </div>
 
-                <p class="text-base text-gray-500 text-lg">Tenders est le premier réseau immobilier qui te fait gagner
+                <p class="text-lg text-gray-500 text-lg">Tenders est le premier réseau immobilier qui te fait gagner
                     du
                     temps ! Que tu sois locataire, propriétaire ou
                     professionnel, notre objectif est de te mettre en relation avec tous les acteurs du marché. A
@@ -94,7 +94,7 @@
                             <p class="text-xl font-bold text-gray-900">
                                 Locataire
                             </p>
-                            <p class="mt-3 text-base text-gray-500 ">
+                            <p class="mt-3 text-lg text-gray-500 ">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
                                 eleifend. Fusce mollis hendrerit
                                 mauris et aliquet.
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="mt-6 flex items-center">
-                        <p class="text-base popping font-extrabold text--blue mr-5">Commencer </p>
+                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
                         <img src="../../../../../assets/images/right-arrow.png" alt="">
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                             <p class="text-xl font-bold text-gray-900">
                                 Propriétaire
                             </p>
-                            <p class="mt-3 text-base text-gray-500">
+                            <p class="mt-3 text-lg text-gray-500">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
                                 eleifend. Fusce mollis hendrerit
                                 mauris et aliquet.
@@ -129,7 +129,7 @@
                         </a>
                     </div>
                     <div class="mt-6 flex items-center ">
-                        <p class="text-base popping font-extrabold text--blue mr-5">Commencer </p>
+                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
                         <img src="../../../../../assets/images/right-arrow.png" alt="">
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                             <p class="text-xl font-bold text-gray-900">
                                 Professionnel
                             </p>
-                            <p class="mt-3 text-base text-gray-500">
+                            <p class="mt-3 text-lg text-gray-500">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
                                 eleifend. Fusce mollis hendrerit
                                 mauris et aliquet.
@@ -155,7 +155,7 @@
                         </a>
                     </div>
                     <div class="mt-6 flex items-center">
-                        <p class="text-base popping font-extrabold text--blue mr-5">Commencer </p>
+                        <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
                         <img src="../../../../../assets/images/right-arrow.png" alt="">
                     </div>
                 </div>
@@ -167,12 +167,12 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si tu es locataire</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-snug sm:text-5xl">Trouver des <span
+                    <h2 class="text-3xl popping font-extrabold leading-snug sm:text-4xl">Trouver des <span
                             class="light-red">biens</span>
                         qui <br> <span class="light-red">vous correspondent</span> </h2>
                     <!-- <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt=""> -->
                 </div>
-                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
@@ -185,19 +185,19 @@
         <div class="grid md:grid-cols-2 gap-14 ">
 
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png" alt="">
-            <div class="flex flex-col pt-10 items-start">
+            <div class="flex flex-col pt-10 items-end ">
 
-            <img src="../../../../../assets/images/home8.png" class="	" alt="">
-            <div class="flex flex-col pt-0 xl:pt-10 items-start">
+            <!-- <img src="../../../../../assets/images/home8.png" class="	" alt="">
+            <div class="flex flex-col pt-0 xl:pt-10 items-start"> -->
 
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl popping font-extrabold leading-normal sm:text-4xl"> <span class="text--blue">Postule</span>
+                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl"> <span class="text--blue">Postule</span>
                         et consulte en temps réel <span class="text--blue">la progression de ton dossier</span>  </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
+                <p class="mt-5 text-lg text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
                     Integer vel laoreet diam, eu dignissim ligula. Ut sit amet libero purus. Praesent rhoncus justo eu
                     dolor posuere
                     maximus. Phasellus pulvinar facilisis.</p>
@@ -218,7 +218,7 @@
                             immobiliers</span></h2>
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
@@ -232,7 +232,7 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h2 class=" popping font-extrabold leading-snug text-4xl ">Reçois des <span
+                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Reçois des <span
                             class="text--blue">candidatures</span> <br>
                         <span class="text--blue">préalablement
                             examinées</span> par la
@@ -242,7 +242,7 @@
                         class="-translate-y-20 -translate-x-16 height-100" alt="">
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
@@ -254,13 +254,13 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h2 class="text-4xl popping font-extrabold leading-snug">Gère <span class="light-red">tes
+                    <h2 class="text-4xl popping font-extrabold leading-snug ">Gère <span class="light-red">tes
                             visites</span>
                     </h2>
                     <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px" alt="">
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
+                <p class="text-lg text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
                     recherche un des candidats(s), notre plateforme offre un
                     accompagnement complet et totalement digitalisé</p>
             </div>
@@ -281,7 +281,7 @@
                         class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
@@ -293,7 +293,7 @@
             height="100px">
         <div class="flex flex-col my-auto items-start px-5 md:px-0">
             <h1 class="popping font-extrabold text-2xl ">Newsletter</h1>
-            <p class="text-base text-gray-500 mt-3">Abonnez-vous à la newsletter pour recevoir une
+            <p class="text-lg text-gray-500 mt-3">Abonnez-vous à la newsletter pour recevoir une
                 notification dès le lancement
             </p>
             <div class="mt-5 w-full">
@@ -312,7 +312,7 @@
             <div class="xl:grid xl:grid-cols-3 xl:gap-8">
                 <div class="space-y-8 xl:col-span-1">
                     <img src="../../../../../assets/images/logo.png" alt="Company name">
-                    <p class="text-gray-500 text-base">
+                    <p class="text-gray-500 text-lg">
                         Holo est le premier réseau social 100% dédié à l’immobilier
                     </p>
                     <div class="flex space-x-6">
@@ -369,13 +369,13 @@
                             </h3>
                             <ul class="mt-8 space-y-4">
                                 <li>
-                                    <a href="#" class="text-base text-gray-500 hover:text-gray-900 ">
+                                    <a href="#" class="text-lg text-gray-500 hover:text-gray-900 ">
                                         Accueil
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                    <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                         A propos
                                     </a>
                                 </li>
@@ -387,7 +387,7 @@
                             </h3>
                             <ul class="mt-8 space-y-4">
                                 <li>
-                                    <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                    <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                         FAQs
                                     </a>
                                 </li>
@@ -399,13 +399,13 @@
                             </h3>
                             <ul class="mt-8 space-y-4">
                                 <li>
-                                    <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                    <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                         Politique de confidentialité
                                     </a>
                                 </li>
 
                                 <li>
-                                    <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                    <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                         Termes et conditions
                                     </a>
                                 </li>
@@ -420,27 +420,27 @@
                                     </h3>
                                     <ul class="mt-4 space-y-4">
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 About
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Blog
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Jobs
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Press
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Partners
                                             </a>
                                         </li>
@@ -452,17 +452,17 @@
                                     </h3>
                                     <ul class="mt-4 space-y-4">
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Claim
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Privacy
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="text-base text-gray-500 hover:text-gray-900">
+                                            <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                                 Terms
                                             </a>
                                         </li>
@@ -472,7 +472,7 @@
                 </div>
             </div>
             <div class="mt-12 border-t border-gray-200 pt-8">
-                <p class="text-base text-gray-400 xl:text-center">
+                <p class="text-lg text-gray-400 xl:text-center">
                     &copy; Copyright © Holo 2021. Tous droits réservés.
                 </p>
             </div>
